testdata/record01.reject.out
type error: can not unify
[32m'FrameBuffer [32mV1[m [32mV0[m[m
with
[32m'Float[m

in "testdata/record01.reject.lc" (line 26, column 15):
 in ScreenOut record.fieldA
              ^^^^^^
